Fix use of deprecated method for scanning wifi networks

scanForNetworksWithParameters has ben removed in the sdk that ships
with XCode 11. Replace its use with scanForNetworksWithName.

The results should be the same.

Task-number: QTBUG-78997
Change-Id: Ifaeb6b380d02364133280b44644ae8ca1e51119a
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>
(cherry picked from commit 1f1bd0af331476d46fe69ceb6df14b82f98cd54d)
Reviewed-by: Dmitriy Kuminov <coding@dmik.org>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>